--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,5 @@ dist/*
 *.egg-info
 */.sass-cache
 tabbed_admin/tests/database.db
-tabbed_admin_exemple/db.sqlite3
+tabbed_admin_example/db.sqlite3
 django_tabbed_admin.egg-info
